cdrkit (1.1.2) RELEASED; urgency=low

  [ Stefan Huehner ]
  * more Cstyle cleanups

 -- Eduard Bloch <blade@debian.org>  Mon,  1 Jan 2007 17:15:16 +0100

cdrkit (1.1.1) RELEASED; urgency=low

  * added geteltorito script from Rainer Krienke

  [ Eduard Bloch ]
  * more verbose abort message if track is specified with some maintainance
    command (#369677)
  * Added more DVD related fixes from SuSE's wodim-1.0pre5cvs-6.src.rpm
  * --devices option for wodim (modeled after cdrskin's output), working on
    Linux and Cygwin
  * Open-By-Device-Letter mode on Cygwin
  * -msifile=... option to store -msinfo output reliably in a dedicated file
  * clear profile names printing (using code from libburnia, thanks to Thomas
    Schmidt)
  * cleanup with unused embedded CVS revision strings from Schilling and
    more gcc -Wall correctness
  * reenabled -format functionality (bug in program function control flow)
  * get maximum DMA buffer size from sysfs on Linux, where possible
  * enable BURN-Free by default where possible
  * setting argv[0] to wodim if someone is cheating and calls it as cdrecord.
    Avoids confusion and printing of the wrong app name in the help output.
  * more documentation updates WRT cdda2wav->icedax renaming, more table
    formating fixes in icedax.1
  * genisoimage documentation updates, mkisofs name changes

  [ Thomas Schmidt ]
  * workaround for older libmagic API
  * code for clear profile name mapping

  [ Peter Samuelson ]
  * expand where genisoimage looks for the config file - same places
    mkisofs looks plus a few more.  (We may wish to trim this back some.)
  * major cleanups to genisoimage.1 manpage; split out the part about
    .genisoimagerc to a new page genisoimagerc.5.

  [ Steve Langasek ]
  * allow hppa and alpha boot code to coexist in one ISO image

  [ Arkadiusz Miskiewicz ]
  * Fake prefix line in the version output of readom to keep compatibility
    with frontends
