@@ -3,6 +3,10 @@ cdrkit (1.1.2) RELEASED; urgency=low
   [ Stefan Huehner ]
   * more Cstyle cleanups
 
+  [ Eduard Bloch ]
+  * stop confusion and bailing out if burnfree/burnproof options have been
+    explicitely specified
+
  -- Eduard Bloch <blade@debian.org>  Mon,  1 Jan 2007 17:15:16 +0100
 
 cdrkit (1.1.1) RELEASED; urgency=low
